--- a/hackerrank/10daysOfJavascript/day8/CreateAButton/index_2.html
+++ b/hackerrank/10daysOfJavascript/day8/CreateAButton/index_2.html
@@ -8,7 +8,7 @@
         <script src="js/buttonsGrid.js" type="text/javascript"></script>
     </head>
     <body>
-        <div>
+        <div id="btns">
             <button id="btn1">1</button>
             <button id="btn2">2</button>
             <button id="btn3">3</button><br/>
@@ -19,6 +19,5 @@
             <button id="btn8">8</button>
             <button id="btn9">9</button><br/>
         </div>
-        <h1>asdasd</h1>
     </body>
 </html>
